--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ /*
+  ~  *
+  ~  *  *
+  ~  *  *  * ===================================
+  ~  *  *  * Copyright (c) 2016.
+  ~  *  *  * 作者：安卓猴
+  ~  *  *  * 微博：@安卓猴
+  ~  *  *  * 博客：http://sunjiajia.com
+  ~  *  *  * Github：https://github.com/opengit
+  ~  *  *  *
+  ~  *  *  * 注意**：如果您使用或者修改该代码，请务必保留此版权信息。
+  ~  *  *  * ===================================
+  ~  *  *
+  ~  *  *
+  ~  *
+  ~  */
+  -->
+
 <resources>
 
-    <string-array name="tab_titles">
-        <item>垂直List</item>
-        <item>水平List</item>
-        <item>垂直Grid</item>
-        <item>水平Grid</item>
-        <item>瀑布Staggered</item>
-    </string-array>
+  <string-array name="tab_titles">
+    <item>垂直List</item>
+    <item>水平List</item>
+    <item>垂直Grid</item>
+    <item>水平Grid</item>
+    <item>瀑布Staggered</item>
+  </string-array>
 </resources>
