--- a/app/src/main/res/color/selector_nav_menu_textcolor.xml
+++ b/app/src/main/res/color/selector_nav_menu_textcolor.xml
@@ -1,7 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ /*
+  ~  *
+  ~  *  *
+  ~  *  *  * ===================================
+  ~  *  *  * Copyright (c) 2016.
+  ~  *  *  * 作者：安卓猴
+  ~  *  *  * 微博：@安卓猴
+  ~  *  *  * 博客：http://sunjiajia.com
+  ~  *  *  * Github：https://github.com/opengit
+  ~  *  *  *
+  ~  *  *  * 注意**：如果您使用或者修改该代码，请务必保留此版权信息。
+  ~  *  *  * ===================================
+  ~  *  *
+  ~  *  *
+  ~  *
+  ~  */
+  -->
+
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/main_blue_light" android:state_checked="true" />
-    <item android:color="@color/main_black_grey" />
+  <item android:color="@color/main_blue_light" android:state_checked="true"/>
+  <item android:color="@color/main_black_grey"/>
 
 </selector>
