--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -1,4 +1,23 @@
 <!--
+  ~ /*
+  ~  *
+  ~  *  *
+  ~  *  *  * ===================================
+  ~  *  *  * Copyright (c) 2016.
+  ~  *  *  * 作者：安卓猴
+  ~  *  *  * 微博：@安卓猴
+  ~  *  *  * 博客：http://sunjiajia.com
+  ~  *  *  * Github：https://github.com/opengit
+  ~  *  *  *
+  ~  *  *  * 注意**：如果您使用或者修改该代码，请务必保留此版权信息。
+  ~  *  *  * ===================================
+  ~  *  *
+  ~  *  *
+  ~  *
+  ~  */
+  -->
+
+<!--
     CardView就是一个卡片样式的FrameLayout。
 
     参数介绍：
@@ -14,23 +33,25 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/id_cardview"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:layout_gravity="center_horizontal"
     app:cardBackgroundColor="@color/main_blue_light"
     app:cardCornerRadius="4dp"
     app:cardElevation="5dp"
-    app:cardMaxElevation="10dp"
+    app:cardMaxElevation="6dp"
     app:cardPreventCornerOverlap="true"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    >
 
-    <TextView
-        android:id="@+id/id_textview"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="@color/main_white"
-        android:textSize="30sp" />
+  <TextView
+      android:id="@+id/id_textview"
+      android:layout_width="match_parent"
+      android:layout_height="200dp"
+      android:gravity="center"
+      android:text="ABCD"
+      android:textColor="@color/main_white"
+      android:textSize="30sp"
+      />
 
 </android.support.v7.widget.CardView>
