--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -1,27 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ /*
+  ~  *
+  ~  *  *
+  ~  *  *  * ===================================
+  ~  *  *  * Copyright (c) 2016.
+  ~  *  *  * 作者：安卓猴
+  ~  *  *  * 微博：@安卓猴
+  ~  *  *  * 博客：http://sunjiajia.com
+  ~  *  *  * Github：https://github.com/opengit
+  ~  *  *  *
+  ~  *  *  * 注意**：如果您使用或者修改该代码，请务必保留此版权信息。
+  ~  *  *  * ===================================
+  ~  *  *
+  ~  *  *
+  ~  *
+  ~  */
+  -->
+
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <group android:checkableBehavior="single">
+  <group android:checkableBehavior="single">
 
-        <item
-            android:id="@+id/nav_menu_home"
-            android:icon="@mipmap/ic_home_white_48dp"
-            android:title="主页" />
+    <item
+        android:id="@+id/nav_menu_home"
+        android:icon="@mipmap/ic_home_white_48dp"
+        android:title="主页"/>
 
-        <item
-            android:id="@+id/nav_menu_categories"
-            android:icon="@mipmap/ic_sort_by_alpha_white_48dp"
-            android:title="分类" />
+    <item
+        android:id="@+id/nav_menu_categories"
+        android:icon="@mipmap/ic_sort_by_alpha_white_48dp"
+        android:title="分类"/>
 
-        <item
-            android:id="@+id/nav_menu_feedback"
-            android:icon="@mipmap/ic_message_white_48dp"
-            android:title="反馈" />
-        <item
-            android:id="@+id/nav_menu_setting"
-            android:icon="@mipmap/ic_settings_white_48dp"
-            android:title="设置" />
+    <item
+        android:id="@+id/nav_menu_feedback"
+        android:icon="@mipmap/ic_message_white_48dp"
+        android:title="反馈"/>
+    <item
+        android:id="@+id/nav_menu_setting"
+        android:icon="@mipmap/ic_settings_white_48dp"
+        android:title="设置"/>
 
-    </group>
+  </group>
 </menu>
