--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,35 @@
+<!--
+  ~ /*
+  ~  *
+  ~  *  *
+  ~  *  *  * ===================================
+  ~  *  *  * Copyright (c) 2016.
+  ~  *  *  * 作者：安卓猴
+  ~  *  *  * 微博：@安卓猴
+  ~  *  *  * 博客：http://sunjiajia.com
+  ~  *  *  * Github：https://github.com/opengit
+  ~  *  *  *
+  ~  *  *  * 注意**：如果您使用或者修改该代码，请务必保留此版权信息。
+  ~  *  *  * ===================================
+  ~  *  *
+  ~  *  *
+  ~  *
+  ~  */
+  -->
+
 <resources>
 
-    <style name="AppTheme" parent="MyThemeBlue"></style>
+  <style name="AppTheme" parent="MyThemeBlue"></style>
 
-    <!-- 蓝色为主色调 -->
-    <style name="MyThemeBlue" parent="Theme.AppCompat.Light.NoActionBar">
+  <!-- 蓝色为主色调 -->
+  <style name="MyThemeBlue" parent="Theme.AppCompat.Light.NoActionBar">
 
-        <!--选中状态icon的颜色和字体颜色-->
-        <item name="colorPrimary">@color/main_blue_light</item>
-        <item name="colorPrimaryDark">@color/main_blue_dark</item>
-        <item name="colorAccent">@color/main_blue_light</item>
-        <!--正常状态下字体颜色和icon颜色-->
-        <item name="android:textColorPrimary">@color/main_white</item>
+    <!--选中状态icon的颜色和字体颜色-->
+    <item name="colorPrimary">@color/main_blue_light</item>
+    <item name="colorPrimaryDark">@color/main_blue_dark</item>
+    <item name="colorAccent">@color/main_blue_light</item>
+    <!--正常状态下字体颜色和icon颜色-->
+    <item name="android:textColorPrimary">@color/main_white</item>
 
-    </style>
+  </style>
 </resources>
